# crewai_ddd_crew

./: README.md  pyproject.toml
src/crewai_poc/: crew.py  main.py
src/crewai_poc/config/: agents.yaml  tasks.yaml
src/crewai_poc/tools/: custom_tool.py
src/crewai_poc/tools/python/module/: writer.py
src/crewai_poc/tools/python/package/: reader.py
