[project]
name = "crewai_poc"
version = "0.1.0"
description = "crewai_poc using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
crewai_poc = "crewai_poc.main:run"
run_crew = "crewai_poc.main:run"
train = "crewai_poc.main:train"
replay = "crewai_poc.main:replay"
test = "crewai_poc.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
